Fix: Avoid startTime will be 02:00.

--- a/src/index.html
+++ b/src/index.html
@@ -1040,7 +1040,7 @@
     <div id="game-controls" class="control-panel">
       <div class="info-block">
         <div class="label">時間</div>
-        <div class="value" id="timer">02:00</div>
+        <div class="value" id="timer">--:--</div>
       </div>
       <div class="info-block">
         <div class="label">錯誤</div>
