--- a/src/index.html
+++ b/src/index.html
@@ -254,6 +254,17 @@
       transition: transform 0.1s ease;
       cursor: pointer;
     }
+    
+    @media  (max-width: 400px) {
+      .fancy-button {
+        font-size: 0.9rem;
+        padding: 0.2rem 1.2rem;
+      }
+
+      .button-area button {
+        height: 40px;
+      }
+    }
 
     .fancy-button.active {
       background: linear-gradient(145deg, #fbff00, #fffb00);
